Bug 1945479 - Completely hide invisible tab group color inputs. r=jswinarton,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D236863

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -997,11 +997,7 @@
   }
 
   input[name="tab-group-color"] {
-    width: 0;
-    height: 0;
-    opacity: 0;
-    margin: 0;
-    position: absolute;
+    display: none;
   }
 
   .tab-group-editor-swatch {
